--- a/screenshots.org
+++ b/screenshots.org
@@ -2,8 +2,8 @@
 
   With these commandlines:
 
-  ./harp_scale_trainer listen richter c blues --merge chord-v --screenshot
+  ./harp_trainer listen richter c blues --merge chord-v --screenshot
 
-  ./harp_scale_trainer quiz 5 richter c blues --merge chord-v --screenshot
+  ./harp_trainer quiz 5 richter c blues --merge chord-v --screenshot
 
   
