fixes and handling

--- a/README.org
+++ b/README.org
@@ -32,7 +32,7 @@
   
   - listen: Listen to your playing, e.g. to monitor bends or scales
   - quiz: Train your ear and musical memory
-  - memorize: Learn licks (batteries not included, but some pointers)
+  - memorize: Learn licks (licks not included, but some pointers)
   - calibrate: Generate samples for holes or record your own
 
   As an initial step you will need to calibrate the program; the resulting
