--- a/TODO.org
+++ b/TODO.org
@@ -17,11 +17,11 @@
 ** TODO [2022-05-11 Wed] Längen in der Zusammenfassung der licks 
 
    (per '--tags print') auch eine Gruppierung/Histogramm nach Länge
-   anzeigen.
+   (i.e. Anzahl Löcher) anzeigen.
 
 ** DONE [2022-05-11 Wed] Prüfen und präzisieren
 
-   Ist mir rec.length nicht eher rec.end gemeint ?
+   Ist mit rec.length nicht eher rec.end gemeint ?
 
 ** TODO [2022-05-16 Mon] Klasse statt Lambdas
 
@@ -30,6 +30,7 @@
 ** DONE [2022-05-16 Mon] Nur Teile der Aufnahme spielen
 
    Z.B. --partial 1/5 oder any/3 
-** TODO [2022-05-19 Thu] Hole grau anzeigen
+
+** TODO [2022-05-19 Thu] Loch grau anzeigen
 
    Wenn es zwar aktuell nicht mehr richtig ist aber davor richtig war
