--- a/TODO.org
+++ b/TODO.org
@@ -31,6 +31,6 @@
 
    Z.B. --partial 1/5 oder any/3 
 
-** TODO [2022-05-19 Thu] Loch grau anzeigen
+** TODO [2022-05-19 Thu] Hole grau anzeigen
 
    Wenn es zwar aktuell nicht mehr richtig ist aber davor richtig war
