--- a/install/README.org
+++ b/install/README.org
@@ -1,15 +1,15 @@
-Scripts to install dependencies for harp-wizard for different
+Scripts to install dependencies for harpwise for different
 linux-distributions.
 
-The wizard itself needs no installation but should rather be started
+The wise itself needs no installation but should rather be started
 directly from its toplevel directory.
 
-* Downloading harp-wizard
+* Downloading harpwise
 
-  From https://github.com/marcIhm/harp-wizard
+  From https://github.com/marcIhm/harpwise
   
   You may download and unpack a release into your home; this will give
-  you a directory ~/harp-wizard
+  you a directory ~/harpwise
 
   If you want to contribute patches you may just as well clone the
   repo.
@@ -18,12 +18,12 @@ directly from its toplevel directory.
 
   The scripts to install dependencies are:
 
-    install-dependencies-on-ubuntu.sh | tee ~/harp-wizard/install.log
+    install-dependencies-on-ubuntu.sh | tee ~/harpwise/install.log
 
   may be suitable for other debian-based systems too (which use apt to
   install software).
 
-    install-dependencies-on-fedora.sh | tee ~/harp-wizard/install.log
+    install-dependencies-on-fedora.sh | tee ~/harpwise/install.log
 
   might also work on systems derived from fedora (which use yum to
   install software).
@@ -49,13 +49,13 @@ directly from its toplevel directory.
 
 * Uninstalling (only half covered)
 
-** Uninstalling harp-wizard itself
+** Uninstalling harpwise itself
 
-   Just remove the directory ~/harp-wizard which you downloaded
+   Just remove the directory ~/harpwise which you downloaded
    initially.
 
-   The data of harp-wizard (samples for calibration and
-   journal.txt) is kept in the hidden directory ~/.harp-wizard,
+   The data of harpwise (samples for calibration and
+   journal.txt) is kept in the hidden directory ~/.harpwise,
    which you may want to remove too.
 
 ** Uninstalling dependencies 
@@ -69,7 +69,7 @@ directly from its toplevel directory.
    However, in general, the number of packages installed as
    dependencies and their disk-usage is fairly low, so there is not
    much pressure to remove those dependencies, even if you do not want
-   to use harp-wizard any more.
+   to use harpwise any more.
 
 * Testing the installer
 
