--- a/install/README.org
+++ b/install/README.org
@@ -65,9 +65,8 @@ directly from its toplevel directory.
   Please note, that after this installation you should be able to record
   and play sound via alsa, e.g.:
 
-    arecord -d 1 foo.wav
-
-    aplay foo.wav
+  - arecord -d 1 foo.wav
+  - aplay foo.wav
 
   however, any configuration issues which might arise are beyond the
   scope of this readme.
